--- a/notebooks/03_regression_atualizado.ipynb
+++ b/notebooks/03_regression_atualizado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/louis/Documents/6/ml/CSRoundPrediction/data\n"
+      "c:\\Users\\luis\\Documents\\6\\CSRoundPrediction\\data\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -452,6 +452,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mini Models!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model was sugested by the professor, and it's idea is to split the data into several parts and train a model for each part. The model will be trained with a different part of the data, and the prediction will be a combination of the predictions of each model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_complete = pd.concat([x_train, y_train], axis=1)\n",
+    "val_complete = pd.concat([x_val, y_val], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part 0 size: 15668, most common class: 1, time range: 174.91 - 175.0\n",
+      "Part 1 size: 15668, most common class: 1, time range: 107.19 - 174.91\n",
+      "Part 2 size: 15668, most common class: 1, time range: 74.95 - 107.18\n",
+      "Part 3 size: 15668, most common class: 1, time range: 39.45 - 74.95\n",
+      "Part 4 size: 15670, most common class: 0, time range: 0.03 - 39.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the number of parts to split the dataset into\n",
+    "num_parts = 5\n",
+    "\n",
+    "# Calculate the size of each part\n",
+    "part_size = len(train_complete) // num_parts\n",
+    "\n",
+    "# Sort the dataset by the 'time_left' column\n",
+    "train_complete_sorted = train_complete.sort_values(by='time_left', ascending=False)\n",
+    "\n",
+    "# Split the dataset into equal parts\n",
+    "parts = [train_complete_sorted.iloc[i*part_size:(i+1)*part_size] for i in range(num_parts)]\n",
+    "\n",
+    "# If there are any remaining rows, add them to the last part\n",
+    "if len(train_complete) % num_parts != 0:\n",
+    "    parts[-1] = pd.concat([parts[-1], train_complete_sorted.iloc[num_parts*part_size:]])\n",
+    "\n",
+    "# Display the size of each part\n",
+    "for i, part in enumerate(parts):\n",
+    "    print(f\"Part {i} size: {len(part)}, most common class: {part['round_winner'].value_counts().idxmax()}, time range: {part['time_left'].min()} - {part['time_left'].max()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part 0 size: 15668, time_left: 175.0 - 174.91\n",
+      "Part 1 size: 15668, time_left: 174.91 - 107.19\n",
+      "Part 2 size: 15668, time_left: 107.18 - 74.95\n",
+      "Part 3 size: 15668, time_left: 74.95 - 39.45\n",
+      "Part 4 size: 15670, time_left: 39.45 - 0.03\n"
+     ]
+    }
+   ],
+   "source": [
+    "import MiniModels\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "model = MiniModels.MiniModels()\n",
+    "\n",
+    "model.fit(x_train, y_train, RandomForestClassifier, 5)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -461,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -475,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
