--- a/notebooks/03_regression_atualizado.ipynb
+++ b/notebooks/03_regression_atualizado.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,16 +283,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.75\n",
+      "F1: 0.75\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/louis/Documents/6/ml/CSRoundPrediction/.venv/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
    "source": [
-    "# # 0.75 Mas não converge\n",
-    "# from sklearn.linear_model import LogisticRegression\n",
-    "# model = LogisticRegression(max_iter=750\n",
-    "#                            )\n",
-    "# model.fit(x_train, y_train)\n",
-    "# calculate_model_quality(model, x_val, y_val)"
+    "# 0.75 But it doesn't converge\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression(max_iter=1750\n",
+    "                           )\n",
+    "model.fit(x_train, y_train)\n",
+    "calculate_model_quality(model, x_val, y_val)"
    ]
   },
   {
@@ -304,46 +327,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.87\n",
+      "F1: 0.87\n"
+     ]
+    }
+   ],
    "source": [
-    "# # 0.87 \n",
-    "# from sklearn.ensemble import RandomForestClassifier\n",
+    "# 0.87 \n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "# model = RandomForestClassifier(\n",
-    "#     n_estimators=100,\n",
-    "#     max_depth=30,\n",
-    "#     random_state=42,\n",
-    "#     min_samples_split=2,\n",
-    "# )\n",
+    "model = RandomForestClassifier(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=30,\n",
+    "    random_state=42,\n",
+    "    min_samples_split=2,\n",
+    ")\n",
     "\n",
-    "# model.fit(x_train, y_train)\n",
-    "# calculate_model_quality(model, x_val, y_val)"
+    "model.fit(x_train, y_train)\n",
+    "calculate_model_quality(model, x_val, y_val)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RandomForestClassifier"
+    "### DecisionTreeClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.81\n",
+      "F1: 0.81\n"
+     ]
+    }
+   ],
    "source": [
-    "# from sklearn import tree\n",
+    "# 0.81\n",
+    "from sklearn import tree\n",
     "\n",
-    "# model = tree.DecisionTreeClassifier(\n",
-    "#     random_state=42,\n",
-    "#     max_depth=60,\n",
-    "# )\n",
+    "model = tree.DecisionTreeClassifier(\n",
+    "    random_state=42,\n",
+    "    max_depth=60,\n",
+    ")\n",
     "\n",
-    "# model.fit(x_train, y_train)\n",
-    "# calculate_model_quality(model, x_val, y_val)"
+    "model.fit(x_train, y_train)\n",
+    "calculate_model_quality(model, x_val, y_val)"
    ]
   },
   {
@@ -355,20 +397,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.85\n",
+      "F1: 0.85\n"
+     ]
+    }
+   ],
    "source": [
-    "# from sklearn.ensemble import GradientBoostingClassifier\n",
+    "# 0.85\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "\n",
-    "# model = GradientBoostingClassifier(\n",
-    "#     n_estimators=75, \n",
-    "#     learning_rate=0.8, \n",
-    "#     max_depth=30,\n",
-    "#     random_state=42\n",
-    "# )\n",
-    "# model.fit(x_train, y_train)\n",
-    "# calculate_model_quality(model, x_val, y_val)"
+    "model = GradientBoostingClassifier(\n",
+    "    n_estimators=75, \n",
+    "    learning_rate=0.8, \n",
+    "    max_depth=30,\n",
+    "    random_state=42\n",
+    ")\n",
+    "model.fit(x_train, y_train)\n",
+    "calculate_model_quality(model, x_val, y_val)"
    ]
   },
   {
@@ -380,15 +432,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.75\n",
+      "F1: 0.75\n"
+     ]
+    }
+   ],
    "source": [
-    "# from sklearn.neighbors import KNeighborsClassifier\n",
+    "# 0.75\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "# model = KNeighborsClassifier(n_neighbors=5)\n",
-    "# model.fit(x_train, y_train)\n",
-    "# calculate_model_quality(model, x_val, y_val)"
+    "model = KNeighborsClassifier(n_neighbors=5)\n",
+    "model.fit(x_train, y_train)\n",
+    "calculate_model_quality(model, x_val, y_val)"
    ]
   },
   {
@@ -402,61 +464,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This model was sugested by the professor, and it's idea is to split the data into several parts and train a model for each part. The model will be trained with a different part of the data, and the prediction will be a combination of the predictions of each model."
+    "This model was sugested by the professor, and it's idea is to split the data into several parts. Then, going through chunks of three parts, three models are trained and the majority vote is taken as the final prediction."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "train_complete = pd.concat([x_train, y_train], axis=1)\n",
-    "val_complete = pd.concat([x_val, y_val], axis=1)"
+    "The cell bellow is a showcase of the model. Using just 1 split, the data will not be split into chunks, and the result should be the same as the \n",
+    "[RandomForestClassifier](#randomforestclassifier)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part 0 size: 15668, most common class: 1, time range: 174.91 - 175.0\n",
-      "Part 1 size: 15668, most common class: 1, time range: 107.19 - 174.91\n",
-      "Part 2 size: 15668, most common class: 1, time range: 74.95 - 107.18\n",
-      "Part 3 size: 15668, most common class: 1, time range: 39.45 - 74.95\n",
-      "Part 4 size: 15670, most common class: 0, time range: 0.03 - 39.45\n"
+      "Self.parts:\n",
+      "Part 0 size: (78342, 76), time_left: 175.0 - 0.03\n",
+      "Accuracy: 0.87\n",
+      "F1: 0.87\n"
      ]
     }
    ],
    "source": [
-    "# Define the number of parts to split the dataset into\n",
-    "num_parts = 5\n",
+    "import MiniModels\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "# Calculate the size of each part\n",
-    "part_size = len(train_complete) // num_parts\n",
+    "Splitmodel = MiniModels.MiniModels()\n",
+    "model_used = RandomForestClassifier(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=30,\n",
+    "    random_state=42,\n",
+    "    min_samples_split=2,\n",
+    ")\n",
     "\n",
-    "# Sort the dataset by the 'time_left' column\n",
-    "train_complete_sorted = train_complete.sort_values(by='time_left', ascending=False)\n",
-    "\n",
-    "# Split the dataset into equal parts\n",
-    "parts = [train_complete_sorted.iloc[i*part_size:(i+1)*part_size] for i in range(num_parts)]\n",
-    "\n",
-    "# If there are any remaining rows, add them to the last part\n",
-    "if len(train_complete) % num_parts != 0:\n",
-    "    parts[-1] = pd.concat([parts[-1], train_complete_sorted.iloc[num_parts*part_size:]])\n",
-    "\n",
-    "# Display the size of each part\n",
-    "for i, part in enumerate(parts):\n",
-    "    print(f\"Part {i} size: {len(part)}, most common class: {part['round_winner'].value_counts().idxmax()}, time range: {part['time_left'].min()} - {part['time_left'].max()}\")\n"
+    "Splitmodel.fit(x_train, y_train, model_used, n_splits=1)\n",
+    "calculate_model_quality(Splitmodel, x_val, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +522,9 @@
       "Part 2 size: (15668, 76), time_left: 107.18 - 74.95\n",
       "Part 3 size: (15668, 76), time_left: 74.95 - 39.45\n",
       "Part 4 size: (15670, 76), time_left: 39.45 - 0.03\n",
-      "Models trained\n"
+      "Models trained\n",
+      "Accuracy: 0.82\n",
+      "F1: 0.82\n"
      ]
     }
    ],
@@ -478,26 +533,47 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "Splitmodel = MiniModels.MiniModels()\n",
-    "model_used = RandomForestClassifier(random_state=42, max_depth=25, n_estimators=90)\n",
+    "# model_used = RandomForestClassifier(random_state=42, max_depth=25, n_estimators=100)\n",
+    "model_used = RandomForestClassifier(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=30,\n",
+    "    random_state=42,\n",
+    "    min_samples_split=2,\n",
+    ")\n",
     "\n",
-    "Splitmodel.fit(x_train, y_train, model_used, 5)"
+    "Splitmodel.fit(x_train, y_train, model_used, 5)\n",
+    "calculate_model_quality(Splitmodel, x_val, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.82\n",
-      "F1: 0.82\n"
+      "Self.parts:\n",
+      "Part 0 size: (15668, 76), time_left: 175.0 - 174.91\n",
+      "Part 1 size: (15668, 76), time_left: 174.91 - 107.19\n",
+      "Part 2 size: (15668, 76), time_left: 107.18 - 74.95\n",
+      "Part 3 size: (15668, 76), time_left: 74.95 - 39.45\n",
+      "Part 4 size: (15670, 76), time_left: 39.45 - 0.03\n",
+      "Models trained\n",
+      "Accuracy: 0.77\n",
+      "F1: 0.77\n"
      ]
     }
    ],
    "source": [
+    "import MiniModels\n",
+    "from sklearn import tree\n",
+    "\n",
+    "Splitmodel = MiniModels.MiniModels()\n",
+    "model_used = tree.DecisionTreeClassifier(random_state=42, max_depth=20)\n",
+    "\n",
+    "Splitmodel.fit(x_train, y_train, model_used, 1)\n",
     "calculate_model_quality(Splitmodel, x_val, y_val)"
    ]
   },
