--- a/notebooks/03_regression.ipynb
+++ b/notebooks/03_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\luis\\Documents\\6\\CSRoundPrediction\\data\n"
+     ]
+    }
+   ],
    "source": [
     "DATA_DIR = pathlib.Path.cwd().parent / 'data'\n",
     "print(DATA_DIR)"
@@ -29,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +63,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 122410 entries, 0 to 122409\n",
+      "Data columns (total 76 columns):\n",
+      " #   Column                        Non-Null Count   Dtype  \n",
+      "---  ------                        --------------   -----  \n",
+      " 0   time_left                     122410 non-null  float64\n",
+      " 1   ct_score                      122410 non-null  float64\n",
+      " 2   t_score                       122410 non-null  float64\n",
+      " 3   bomb_planted                  122410 non-null  bool   \n",
+      " 4   ct_health                     122410 non-null  float64\n",
+      " 5   t_health                      122410 non-null  float64\n",
+      " 6   ct_armor                      122410 non-null  float64\n",
+      " 7   t_armor                       122410 non-null  float64\n",
+      " 8   ct_money                      122410 non-null  float64\n",
+      " 9   t_money                       122410 non-null  float64\n",
+      " 10  ct_helmets                    122410 non-null  float64\n",
+      " 11  t_helmets                     122410 non-null  float64\n",
+      " 12  ct_defuse_kits                122410 non-null  float64\n",
+      " 13  ct_players_alive              122410 non-null  float64\n",
+      " 14  t_players_alive               122410 non-null  float64\n",
+      " 15  ct_weapon_ak47                122410 non-null  float64\n",
+      " 16  t_weapon_ak47                 122410 non-null  float64\n",
+      " 17  ct_weapon_aug                 122410 non-null  float64\n",
+      " 18  t_weapon_aug                  122410 non-null  float64\n",
+      " 19  ct_weapon_awp                 122410 non-null  float64\n",
+      " 20  t_weapon_awp                  122410 non-null  float64\n",
+      " 21  ct_weapon_cz75auto            122410 non-null  float64\n",
+      " 22  t_weapon_cz75auto             122410 non-null  float64\n",
+      " 23  ct_weapon_famas               122410 non-null  float64\n",
+      " 24  t_weapon_famas                122410 non-null  float64\n",
+      " 25  ct_weapon_galilar             122410 non-null  float64\n",
+      " 26  t_weapon_galilar              122410 non-null  float64\n",
+      " 27  ct_weapon_glock               122410 non-null  float64\n",
+      " 28  t_weapon_glock                122410 non-null  float64\n",
+      " 29  ct_weapon_m4a1s               122410 non-null  float64\n",
+      " 30  ct_weapon_m4a4                122410 non-null  float64\n",
+      " 31  t_weapon_m4a4                 122410 non-null  float64\n",
+      " 32  ct_weapon_mac10               122410 non-null  float64\n",
+      " 33  t_weapon_mac10                122410 non-null  float64\n",
+      " 34  ct_weapon_mag7                122410 non-null  float64\n",
+      " 35  ct_weapon_mp9                 122410 non-null  float64\n",
+      " 36  t_weapon_mp9                  122410 non-null  float64\n",
+      " 37  ct_weapon_sg553               122410 non-null  float64\n",
+      " 38  t_weapon_sg553                122410 non-null  float64\n",
+      " 39  ct_weapon_ssg08               122410 non-null  float64\n",
+      " 40  t_weapon_ssg08                122410 non-null  float64\n",
+      " 41  ct_weapon_ump45               122410 non-null  float64\n",
+      " 42  t_weapon_ump45                122410 non-null  float64\n",
+      " 43  ct_weapon_xm1014              122410 non-null  float64\n",
+      " 44  ct_weapon_deagle              122410 non-null  float64\n",
+      " 45  t_weapon_deagle               122410 non-null  float64\n",
+      " 46  ct_weapon_fiveseven           122410 non-null  float64\n",
+      " 47  t_weapon_fiveseven            122410 non-null  float64\n",
+      " 48  ct_weapon_usps                122410 non-null  float64\n",
+      " 49  t_weapon_usps                 122410 non-null  float64\n",
+      " 50  ct_weapon_p250                122410 non-null  float64\n",
+      " 51  t_weapon_p250                 122410 non-null  float64\n",
+      " 52  ct_weapon_p2000               122410 non-null  float64\n",
+      " 53  t_weapon_p2000                122410 non-null  float64\n",
+      " 54  ct_weapon_tec9                122410 non-null  float64\n",
+      " 55  t_weapon_tec9                 122410 non-null  float64\n",
+      " 56  ct_grenade_hegrenade          122410 non-null  float64\n",
+      " 57  t_grenade_hegrenade           122410 non-null  float64\n",
+      " 58  ct_grenade_flashbang          122410 non-null  float64\n",
+      " 59  t_grenade_flashbang           122410 non-null  float64\n",
+      " 60  ct_grenade_smokegrenade       122410 non-null  float64\n",
+      " 61  t_grenade_smokegrenade        122410 non-null  float64\n",
+      " 62  ct_grenade_incendiarygrenade  122410 non-null  float64\n",
+      " 63  t_grenade_incendiarygrenade   122410 non-null  float64\n",
+      " 64  ct_grenade_molotovgrenade     122410 non-null  float64\n",
+      " 65  t_grenade_molotovgrenade      122410 non-null  float64\n",
+      " 66  ct_grenade_decoygrenade       122410 non-null  float64\n",
+      " 67  t_grenade_decoygrenade        122410 non-null  float64\n",
+      " 68  round_winner                  122410 non-null  int64  \n",
+      " 69  de_dust2                      122410 non-null  bool   \n",
+      " 70  de_inferno                    122410 non-null  bool   \n",
+      " 71  de_mirage                     122410 non-null  bool   \n",
+      " 72  de_nuke                       122410 non-null  bool   \n",
+      " 73  de_overpass                   122410 non-null  bool   \n",
+      " 74  de_train                      122410 non-null  bool   \n",
+      " 75  de_vertigo                    122410 non-null  bool   \n",
+      "dtypes: bool(8), float64(67), int64(1)\n",
+      "memory usage: 64.4 MB\n"
+     ]
+    }
+   ],
    "source": [
     "model_data = data.copy()\n",
     "data.info()"
@@ -86,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,9 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((78342, 75), (19586, 75), (24482, 75))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_train.shape, x_val.shape, x_test.shape"
    ]
@@ -151,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +490,7 @@
     "Splitmodel = MiniModels.MiniModels()\n",
     "model_used = tree.DecisionTreeClassifier(random_state=42, max_depth=20)\n",
     "\n",
-    "Splitmodel.fit(x_train, y_train, model_used, 1)\n",
+    "Splitmodel.fit(x_train, y_train, model_used, 5)\n",
     "calculate_model_quality(Splitmodel, x_val, y_val)"
    ]
   },
@@ -449,11 +558,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n",
+      "{'max_depth': 50, 'min_samples_split': 2, 'n_estimators': 300}\n",
+      "0.8706396765874642\n"
+     ]
+    }
+   ],
    "source": [
-    "# import gridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "model = RandomForestClassifier(random_state=42)\n",
@@ -487,9 +607,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.88\n",
+      "F1: 0.88\n"
+     ]
+    }
+   ],
    "source": [
     "# 0.87 \n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -514,9 +643,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "round_winner\n",
+      "0    49928\n",
+      "1    48000\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Accuracy: 0.51\n"
+     ]
+    }
+   ],
    "source": [
     "# Most frequent class\n",
     "most_frequent_class = y_train_val.value_counts()\n",
@@ -538,11 +680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model was certified with 0.88 accuracy and beat the DummyClassifier.\n",
-    "\n",
-    "```markdown\n",
-    "👍\n",
-    "```"
+    "Model was certified with 0.88 accuracy and beat the DummyClassifier."
    ]
   },
   {
